--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
+  "scripts": {
+    "start": "ts-node src/index.ts"
+  },
   "devDependencies": {
     "@types/node": "^15.6.0",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
-  },
-  "dependencies": {}
+  }
 }
